alignment fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -62,7 +62,7 @@
 .mobAnim {
   height: 30%;
   background: #374151;
-  margin-top: 18px;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
